RESOLVED FIXED59357
Fix strict OwnPtr in Element.cpp
https://bugs.webkit.org/show_bug.cgi?id=59357
Summary Fix strict OwnPtr in Element.cpp
Adam Barth
Reported 2011-04-25 15:36:43 PDT
Fix strict OwnPtr in Element.cpp
Attachments
Patch (1.04 KB, patch)
2011-04-25 15:37 PDT, Adam Barth
levin: review+
Adam Barth
Comment 1 2011-04-25 15:37:04 PDT
Adam Barth
Comment 2 2011-04-25 15:38:21 PDT
Note You need to log in before you can comment on or make changes to this bug.