2011-04-25  Adam Barth  <abarth@webkit.org>

Reviewed by David Levin.

        Fix strict OwnPtr in Element.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59357

        * dom/NodeRareData.h:
        (WebCore::NodeRareData::ensureEventTargetData):


git-svn-id: svn://svn.chromium.org/blink/trunk@84808 bbb929c8-8fbe-4397-9dbb-9b2b20218538