third_party/WebKit/Source/WebCore/dom/NodeRareData.h
@@ -121,7 +121,7 @@ public:
     EventTargetData* ensureEventTargetData()
     {
         if (!m_eventTargetData)
-            m_eventTargetData.set(new EventTargetData);
+            m_eventTargetData = adoptPtr(new EventTargetData);
         return m_eventTargetData.get();
     }
 
